--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "bshaffer/oauth2-server-php": "1.10"
     }
 }
