--- a/app/composer.json
+++ b/app/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.9",
-        "bshaffer/oauth2-server-php": "1.10"
+        "bshaffer/oauth2-server-php": "1.10",
+        "doctrine/inflector": "^2.0",
+        "icanboogie/inflector": "^2.2"
     }
 }
